# icicle-plot

./: .gitignore  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml
data/: .gitignore  README.md
examples/: README.md  example1.toml
src/: main.py
