[project]
name = "icicle-plot"
version = "0.1.0"
description = "generate an icicle plot from hierarchical data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "etf-scraper>=0.1.2",
    "plotly>=6.2.0",
    "polars>=1.31.0",
]

[dependency-groups]
dev = [
    "complexipy>=3.0.0",
    "mypy>=1.16.1",
    "pyrefly>=0.22.0",
    "ruff>=0.12.1",
    "ty>=0.0.1a12",
]

[[tool.mypy.overrides]]
module = ["etf_scraper.*"]
follow_untyped_imports = true

